--- a/package.json
+++ b/package.json
@@ -12,9 +12,23 @@
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/test-utils": "^3.19.1",
+    "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/vue-table": "^8.21.3",
+    "@vueuse/core": "^13.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.28.0",
+    "lucide-vue-next": "^0.513.0",
     "nuxt": "^3.17.5",
+    "reka-ui": "^2.3.0",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.8",
+    "tw-animate-css": "^1.3.4",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "shadcn-nuxt": "^2.2.0",
+    "typescript": "^5.8.3"
   }
 }
